Chamber of Chills

--- a/ChamberOfChills/ChamberOfChills.html
+++ b/ChamberOfChills/ChamberOfChills.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="ChamberOfChills01.jpg"><br>
+<img src="ChamberOfChills01.jpg" title="cover by Al Avison"><br>
 26 issues 1951-1954 by Harvey, 25 issues 1972-1975 by Marvel <br>
 <p>
 <div class="row"><div class="column">
@@ -19,15 +19,32 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills08.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills01.jpg" title="cover by Al Avison"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills02.jpg" title="cover by Al Avison"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills03.jpg" title="cover by Al Avison"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills04.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills05.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills06.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills07.jpg" title="cover by Al Avison"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills08.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills09.jpg" title="cover by Al Avison"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills10.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills11.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills12.jpg" title="cover by Al Avison"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills13.jpg" title="cover by Al Avison"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills14.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills15.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills16.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills17.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills18.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills19.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills20.jpg" title="cover by Howard Nostrand"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills21.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills22.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills23.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills24.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills25.jpg" title="cover by Lee Elias"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills26.jpg" title="cover by Al Avison"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChamberOfChills1972_01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChamberOfChills1972_02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChamberOfChills1972_03.jpg"></div>
