--- a/WonderComics/WonderComics.html
+++ b/WonderComics/WonderComics.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-<img src="WonderComics.jpg"> <br>
-Series: 2 issues 1939<br>
-Publisher: Fox Features<br>
+<img src="WonderComicsFox1.jpg"> <br>
+2 issues 1939 by Fox Features, 20 issues 1944-1948 by Pines<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -20,8 +19,28 @@ Publisher: Fox Features<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="WonderComics.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="WonderComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComicsFox1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComicsFox2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderComics20.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
