--- a/kb.html
+++ b/kb.html
@@ -6152,6 +6152,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Haunted Thrills</td>
+<td>1952</td>
+<td>Farrell</td>
+<td><a href="HauntedThrills/HauntedThrills.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Havok &amp; Wolverine Meltdown</td>
 <td>1990</td>
 <td>Marvel</td>
@@ -7977,6 +7984,13 @@ Creative Knowledgebase<br>
 <td>1934</td>
 <td>King Comics</td>
 <td><a href="MandrakeTheMagician/MandrakeTheMagician.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Many Ghosts of Doctor Graves</td>
+<td>1967</td>
+<td>Charlton</td>
+<td><a href="MGDG/MDGD.html">Details</a></td>
 </tr>
 
 <tr>
