--- a/Spellbound/Spellbound.html
+++ b/Spellbound/Spellbound.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Spellbound1.jpg"> <br>
+<img src="Spellbound1.jpg" title="cover by Sol Brodsky"> <br>
 Series: 34 issues 1952 - 1957<br>
 Publisher: Atlas, Marvel<br>
 <p>
@@ -20,54 +20,48 @@ Publisher: Atlas, Marvel<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Spellbound1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound9.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound14.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound15.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound16.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound17.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound18.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound19.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound20.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound21.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound22.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound23.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound24.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound25.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound26.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound27.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound28.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound29.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound30.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound31.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound32.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound33.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Spellbound34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound1.jpg" title="cover by Sol Brodsky"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound2.jpg" title="cover by Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound3.jpg" title="cover by Russ Heath"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound4.jpg" title="cover by Russ Heath"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound5.jpg" title="cover by Sol Brodsky"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound6.jpg" title="cover by Sol Brodsky"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound7.jpg" title="cover by Sol Brodsky"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound8.jpg" title="cover by Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound9.jpg" title="cover by Russ Heath"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound10.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound11.jpg" title="cover by Tony DiPreta"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound12.jpg" title="cover by Russ Heath"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound13.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound14.jpg" title="cover by Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound15.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound16.jpg" title="cover by Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound17.jpg" title="cover by Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound18.jpg" title="cover by"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound19.jpg" title="cover by Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound20.jpg" title="cover by Russ Heath"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound21.jpg" title="cover by Russ Heath"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound22.jpg" title="cover by Harry Anderson"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound23.jpg" title="cover by Sol Brodsky"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound24.jpg" title="cover by Joe Maneely"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound25.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound26.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound27.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound28.jpg" title="cover by Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound29.jpg" title="cover by Joe Maneely"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound30.jpg" title="cover by Bill Everett"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound31.jpg" title="cover by Joe Maneely"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound32.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound33.jpg" title="cover by Carl Burgos"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spellbound34.jpg" title="cover by Carl Burgos"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Horror anthology series. Issue #1:<ul>
-<li>Cover by Sol Brodsky. 
-<li>The Stuffed Shirt. 
-<li>Step Into My Coffin.
-<li>The Eye That Never Closed!
-<li>Dervish of Doom
-<li>The Man with Two Faces
-<li>Horror of Crag Island.
-</ul> 
+SF/Horror anthology. This series was one of five SF anthologies launched in a six-month period (cover dates January 1952–June 1952), increasing Marvel's SF line from seven to twelve books. It was also one of five such anthologies cancelled together, reducing Atlas's SF line from thirteen books to eight. 
+</p><p>
+It was re-launched as one of eight SF anthologies launched in an eight-month period (cover dates October 1955–June 1956), increasing Marvel's SF line from eight to sixteen books. This book ran until the collapse of Atlas's distributor and the subsequent restructuring known as the "Atlas Implosion".
 </p>
 </body>
 </html>
