Love and Rockets

--- a/kb.html
+++ b/kb.html
@@ -7805,6 +7805,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Love And Rockets</td>
+<td>1982</td>
+<td>Fantagraphics</td>
+<td><a href="LoveAndRockets/LoveAndRockets.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Love Classics</td>
 <td>1949</td>
 <td>Marvel</td>
