--- a/FamousFunnies/FamousFunnies.html
+++ b/FamousFunnies/FamousFunnies.html
@@ -2,20 +2,54 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Famous Funnies</title>
 </head>
 <body>
 
-<img src="FamousFunnies1933.jpg"> 
-<img src="FamousFunnies1934.jpg"> <br>
-Creator: <a href="../../Creator/MaxGaines/MaxGaines.html">Maxwell Gaines</a><br>
-Series: 1934 - 1955, 218 issues, first comic book series<br>
-Publisher: Eastern Color Printing<br>
+<img src="FamousFunnies00.jpg"><br>
+Creator: <a href="../MaxGaines/MaxGaines.html">Maxwell Gaines</a><br>
+218 issues from 1934-1955 by Eastern Color Printing. The first comic book series.<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies00.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FamousFunnies20.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Famous Funnies is an American publication of the 1930s that represents what popular culture historians consider the first true American comic book, following seminal precursors.
 </p><p>
-The creation of the modern American comic book came in stages. Dell Publishing in 1929 published a 16-page, newsprint periodical of original, comic strip-styled material titled <a href="https://blzimg.github.io/Funnies/Funnies.html">The Funnies</a> and described by the Library of Congress as "a short-lived newspaper tabloid insert". (This is not to be confused with Dell's later same-name comic book, which began publication in 1936.) Historian Ron Goulart describes the four-color, newsstand periodical as "more a Sunday comic section without the rest of the newspaper than a true comic book".
+The creation of the modern American comic book came in stages. Dell Publishing in 1929 published a 16-page, newsprint periodical of original, comic strip-styled material titled <a href="../Funnies/Funnies.html">The Funnies</a> and described by the Library of Congress as "a short-lived newspaper tabloid insert". (This is not to be confused with Dell's later same-name comic book, which began publication in 1936.) Historian Ron Goulart describes the four-color, newsstand periodical as "more a Sunday comic section without the rest of the newspaper than a true comic book".
 </p><p>
 That same year, Eastern Color salesperson Maxwell Gaines and sales manager Harry I. Wildenberg collaborated with Dell to publish the 36-page one-shot Famous Funnies: A Carnival of Comics, considered by historians the first true American comic book. Goulart, for example, calls it "the cornerstone for one of the most lucrative branches of magazine publishing".
 </p><p>
