--- a/Deadman/Deadman.html
+++ b/Deadman/Deadman.html
@@ -2,24 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Deadman</title>
 </head>
 
 <body>
-<h2>Deadman</h2>
-<img src="Deadman.jpg"> <br>
-Publisher: DC, Vertigo
+<img src="Deadman01.jpg" title="cover by Neal Adams"> <br>
+7 issues 1985, 4 issues 1986, 9 issues 2002, 13 issues 2006, 4 issues 2017, by DC and Vertigo
 <p>
-Series:<br>
-Deadman (1985 1st Series, 7 issues)<br>
-Deadman (1986 2nd Series, 4 issues)<br>
-Deadman (2002 3rd Series, 9 issues)<br>
-Deadman (2006 4th Series, 13 issues)<br>
-Deadman (2017 5th Series, 4 issues)<br>
-</p>
-<p>
-Deadman (Boston Brand) is a fictional character, a comic book superhero in the DC Comics universe. He first appeared in Strange Adventures #205 (October 1967), was created by Arnold Drake and Carmine Infantino, and included the first known depiction of narcotics in a story approved by the Comics Code Authority.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Deadman01.jpg" title="cover by Neal Adams"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman02.jpg" title="cover by Neal Adams"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman03.jpg" title="cover by Neal Adams"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman04.jpg" title="cover by Neal Adams"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman05.jpg" title="cover by Neal Adams"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman06.jpg" title="cover by Neal Adams"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman07.jpg" title="cover by Neal Adams"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman08.jpg" title="cover by Jose Luis Garcia-Lopez"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman09.jpg" title="cover by Jose Luis Garcia-Lopez"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman10.jpg" title="cover by Jose Luis Garcia-Lopez"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman11.jpg" title="cover by Jose Luis Garcia-Lopez"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+Deadman (Boston Brand) is a fictional character, a comic book superhero in the DC Comics universe. He first appeared in <a href="../StrangeAdventures/StrangeAdventures.html">Strange Adventures</a> #205 (October 1967), was created by Arnold Drake and Carmine Infantino, and included the first known depiction of narcotics in a story approved by the Comics Code Authority.
 </p><p>
 Deadman is a ghost, formerly a circus trapeze artist named Boston Brand who performed under the name Deadman, a stage persona including a red costume and white corpse makeup. When Brand is murdered during a trapeze performance by a mysterious assailant known only as the Hook, his spirit is given the power to possess any living being by a Hindu god named "Rama Kushna," in order to search for his murderer and obtain justice. It is established in Green Arrow Vol. 4, #4, that Deadman believes Rama is the supreme being of the universe.
 </p><p>
@@ -38,5 +55,7 @@ Deadman Love After Death (1989)<br>
 Deadman on Campus Promotional Media Kit (1998)<br>
 Deadman TPB (2011-Present DC)<br>
 Deadman TPB (2017 DC) The Complete Collection by Kelley Jones<br>
+
+</p>
 </body>
 </html>
