--- a/Microtimes/Microtimes.html
+++ b/Microtimes/Microtimes.html
@@ -27,6 +27,18 @@ Publisher: BAM<br>
 <div class="mySlides" style="text-align: center;"><img src="Microtimes4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Microtimes5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Microtimes6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Microtimes18.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
