--- a/kb.html
+++ b/kb.html
@@ -3700,6 +3700,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Cult of the Dead Cow</td>
+<td>2019</td>
+<td>Public Affairs</td>
+<td><a href="CultOfTheDeadCow/CultOfTheDeadCow.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cupid</td>
 <td>1949</td>
 <td>Marvel</td>
@@ -8736,7 +8743,7 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Micro Times</td>
+<td>MicroTimes</td>
 <td>1984</td>
 <td>BAM</td>
 <td><a href="Microtimes/Microtimes.html">Details</a></td>
