--- a/Metropol/Metropol.html
+++ b/Metropol/Metropol.html
@@ -9,9 +9,33 @@
 
 <body>
 <img src="Metropol1.jpg"> <br>
-Series: 12 issues 1991<br>
-Publisher: Epic<br>
+12 issues 1991 by Epic (Marvel)
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Metropol1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Metropol12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Chronicles the beginning of the apocalypse in Ted McKeever's unique, edgy style.
 </p><p>
 Creepy, mesmerising, disorienting, slathered in messy detail and kinetic: METROPOL is a disturbing but strangely enjoyable read. It combines the guilty pleasure of the American obsession with Judaeo-Christian apocalysis with Buffy-generation moral heroism and the blood and guts and chaos of the scariest modern horror. 
