--- a/CultOfTheDeadCow/CultOfTheDeadCow.html
+++ b/CultOfTheDeadCow/CultOfTheDeadCow.html
@@ -20,6 +20,9 @@ Novel by Joseph Menn, 2019 by Public Affairs
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="CDC.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CDC01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CDC02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CDC03.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
