Startling Terror Tales

--- a/kb.html
+++ b/kb.html
@@ -7469,6 +7469,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>L.B. Cole</td>
+<td>1918</td>
+<td>Creator</td>
+<td><a href="LBCole/LBCole.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Labyrinth</td>
 <td>1986</td>
 <td>Marvel</td>
@@ -8544,6 +8551,13 @@ Creative Knowledgebase<br>
 <td>1994</td>
 <td>Dark Horse</td>
 <td><a href="Mask/Mask.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mask Comics</td>
+<td>1945</td>
+<td>Rural Home</td>
+<td><a href="MaskComics/MaskComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11832,6 +11846,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Startling Terror Tales</td>
+<td>1952</td>
+<td>Star Publications</td>
+<td><a href="StartlingTerrorTales/StartlingTerrorTales.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Steelgrip Starkey</td>
 <td>1986</td>
 <td>Epic</td>
@@ -12228,6 +12249,13 @@ Creative Knowledgebase<br>
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="Terrarists/Terrarists.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Terrifying Tales</td>
+<td>1953</td>
+<td>Star Publications</td>
+<td><a href="TerrifyingTales/TerrifyingTales.html">Details</a></td>
 </tr>
 
 <tr>
