--- a/kb.html
+++ b/kb.html
@@ -525,6 +525,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Adventures Into Darkness</td>
+<td>1952</td>
+<td>Pines</td>
+<td><a href="AdventuresIntoDarkness/AdventuresIntoDarkness.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Into Terror</td>
 <td>1951</td>
 <td>Marvel</td>
@@ -5635,6 +5642,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Gayety</td>
+<td>1942</td>
+<td>Timely</td>
+<td><a href="Gayety/Gayety.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gene Dogs</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -5716,6 +5730,13 @@ Creative Knowledgebase<br>
 <td>1989</td>
 <td>Dark Horse</td>
 <td><a href="GhostInTheShell/GhostInTheShell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ghost Rider</td>
+<td>1950</td>
+<td>Magazine Enterprises</td>
+<td><a href="GhostRider1950/GhostRider1950.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9986,6 +10007,13 @@ Creative Knowledgebase<br>
 <td>1947</td>
 <td>Fox</td>
 <td><a href="PhantomLady/PhantomLady.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Phantom Rider</td>
+<td>1967</td>
+<td>Marvel</td>
+<td><a href="NightRider/NightRider.html">Details</a></td>
 </tr>
 
 <tr>
