--- a/NightRider/NightRider.html
+++ b/NightRider/NightRider.html
@@ -12,16 +12,6 @@
 Series: 7 issues 1967, 6 issues 1974<br>
 Publisher: Marvel<br>
 <p>
-Ghost Rider's story continued in Western Gunfighters (Marvel, 1970 series) #1-7. Night Rider was originally called Ghost Rider, and was renamed Night Rider following the introduction of Marvel's motorcycle-riding character called <a href="https://blzim.github.io/kb/Creation/GhostRider/GhostRider.html">Ghost Rider</a>.
-</p><p>
-Marvel's first Ghost Rider look was based on the Magazine Enterprises character Ghost Rider (Rex Fury), created by writer Ray Krank and artist Dick Ayers for editor Vincent Sullivan in Tim Holt #11 (1949). The character appeared in horror-themed Western stories through the run of Tim Holt, Red Mask, and A-1 Comics up until the institution of the Comics Code.
-</p><p>
-After the trademark to the character's name and motif lapsed, Marvel Comics debuted its own near-identical, horror-free version of the character in Ghost Rider #1 (cover-dated Feb. 1967), by writers Roy Thomas and Gary Friedrich and original Ghost Rider artist Ayers. The song "(Ghost) Riders in the Sky: A Cowboy Legend", being popular at the time, inspired the comics.[citation needed] The song was also the inspiration for the Magazine Enterprises' horror-Western comic-book character the Ghost Rider.
-</p><p>
-With the introduction of Marvel's supernatural Ghost Rider in the 1970s, Marvel renamed its Western Ghost Rider — first, to the unfortunate Night Rider (a term previously used in the Southern United States to refer to members of the Ku Klux Klan) in a 1974–1975 reprint series, and then to Phantom Rider. At least five men have been the Phantom Rider, one of whom is active in the modern day.
-</p><p>
-The Magazine Enterprises library of characters, including its version of Ghost Rider, was reprinted by AC Comics in the 1980s. While the copyrights have lapsed due to non-renewal, AC renamed the Ghost Rider as the Haunted Horseman, due to Marvel having maintained the Ghost Rider trademark.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -47,6 +37,18 @@ The Magazine Enterprises library of characters, including its version of Ghost R
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+
+</p><p>
+Marvel's Ghost Rider story continued in Western Gunfighters (Marvel, 1970 series) #1-7. Night Rider was originally called Ghost Rider, and was renamed Night Rider following the introduction of Marvel's motorcycle-riding character called <a href="https://blzim.github.io/kb/Creation/GhostRider/GhostRider.html">Ghost Rider</a>.
+</p><p>
+Marvel's first Ghost Rider look was based on the Magazine Enterprises character <a href="../GhostRider1950/GhostRider1950.html">Ghost Rider</a> (Rex Fury), created by writer Ray Krank and artist Dick Ayers for editor Vincent Sullivan in Tim Holt #11 (1949). The character appeared in horror-themed Western stories through the run of Tim Holt, Red Mask, and A-1 Comics up until the institution of the Comics Code.
+</p><p>
+After the trademark to the character's name and motif lapsed, Marvel Comics debuted its own near-identical, horror-free version of the character in Ghost Rider #1 (cover-dated Feb. 1967), by writers Roy Thomas and Gary Friedrich and original Ghost Rider artist Ayers. The song "(Ghost) Riders in the Sky: A Cowboy Legend", being popular at the time, inspired the comics.[citation needed] The song was also the inspiration for the Magazine Enterprises' horror-Western comic-book character the Ghost Rider.
+</p><p>
+With the introduction of Marvel's supernatural Ghost Rider in the 1970s, Marvel renamed its Western Ghost Rider — first, to the unfortunate Night Rider (a term previously used in the Southern United States to refer to members of the Ku Klux Klan) in a 1974–1975 reprint series, and then to Phantom Rider. At least five men have been the Phantom Rider, one of whom is active in the modern day.
+</p><p>
+The Magazine Enterprises library of characters, including its version of Ghost Rider, was reprinted by AC Comics in the 1980s. While the copyrights have lapsed due to non-renewal, AC renamed the Ghost Rider as the Haunted Horseman, due to Marvel having maintained the Ghost Rider trademark.
+</p>
 
 </body>
 </html>
