--- a/kb.html
+++ b/kb.html
@@ -3665,6 +3665,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Crown Comics</td>
+<td>1945</td>
+<td>McCombs</td>
+<td><a href="CrownComics/CrownComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crusades</td>
 <td>2001</td>
 <td>Vertigo</td>
