--- a/SpeedComics/SpeedComics.html
+++ b/SpeedComics/SpeedComics.html
@@ -9,9 +9,8 @@
 
 <body>
 <img src="SpeedComics1.jpg"> <br>
-Series: 11 issues 1939 - 1940, 33 issues 1941 - 1947<br>
+11 issues 1939-1940 by Brookwood, 33 issues 1941-1947 by Harvey<br>
 Created by Bob Powell<br>
-Publisher: Brookwood, Harvey<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -32,6 +31,15 @@ Publisher: Brookwood, Harvey<br>
 <div class="mySlides" style="text-align: center;"><img src="SpeedComics9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SpeedComics10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SpeedComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpeedComics20.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
