--- a/kb.html
+++ b/kb.html
@@ -2301,6 +2301,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Black Cat</td>
+<td>1946</td>
+<td>Harvey</td>
+<td><a href="BlackCat/BlackCat.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Cross Special</td>
 <td>1988</td>
 <td>Dark Horse</td>
