--- a/GuardiansOfTheGalaxy/GuardiansOfTheGalaxy.html
+++ b/GuardiansOfTheGalaxy/GuardiansOfTheGalaxy.html
@@ -2,21 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>the Guardians of the Galaxy</title>
 </head>
 
 <body>
-the Guardians of the Galaxy<br>
-<img src="GuardiansOfTheGalaxyMovie.jpg"> <img src="GuardiansOfTheGalaxyMovie2.jpg"> <br>
+<img src="GuardiansOfTheGalaxyMovie.jpg"><br>
 Series: Appearence 1969, First Title 1990, Movie 2014, 2017<br>
 Publisher: Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="GuardiansOfTheGalaxyMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GuardiansOfTheGalaxyMovie2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MSH18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelPresents03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GOTG01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GOTG02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GOTG03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GOTG04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GOTG05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GOTG06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GOTG2008_01.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The Guardians of the Galaxy are a fictional spacefaring superhero team appearing in American comic books published by Marvel Comics. Dan Abnett and Andy Lanning formed the team from existing and previously unrelated characters created by a variety of writers and artists, with an initial roster of Star-Lord, Rocket Raccoon, Quasar, Adam Warlock, Gamora, Drax the Destroyer and Groot.
 </p><p>
 These Guardians first appeared in "Annihilation: Conquest" #6 (April 2008). A feature film based on this team was released in 2014. A sequel, titled Guardians of the Galaxy Vol. 2, was released in 2017. 
-</p><p>
-<img src="MSH18.jpg"> <img src="MarvelPresents03.jpg">
 </p><p>
 The original team was created by Arnold Drake and Gene Colan in 1969, and first appeared in Marvel Super-Heroes #18, then a new team for Marvel Presents #3 in 1975.
 </p>
