--- a/MarvelSuperHeroes/MarvelSuperHeroes.html
+++ b/MarvelSuperHeroes/MarvelSuperHeroes.html
@@ -2,39 +2,49 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Marvel Super-Heroes</title>
 </head>
 
 <body>
-<h2>Marvel Super-Heroes</h2>
 <img src="marvelsuper-heroes12.jpg"><br>
-Series: on-going<br>
-Publisher: 1967 Marvel<br>
-<p>
+14 issues (#12-26) in 1967 by Marvel<br>
 Numbering continues from Fantasy Masterpieces #11. Volume 2 #1–15 (1990).
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroes26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="marvelsuper-heroesSpecial01.jpg"></div>
+
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
 Origin and first appearance of Captain Marvel in "The Coming of Captain Marvel!" Script by Stan Lee, pencils by Gene Colan, inks by Frank Giacoia. The rest of the issue consists of Golden Age reprints: Captain America (from Men's Adventures # 28; 1954); the Human Torch by Dick Ayers (from Men's Adventures # 27; 1954); the Destroyer (from All Winners # 12; 1944); the Black Knight by Stan Lee and Joe Maneely (from Black Knight # 1; 1955); and the Sub-Mariner by Bill Everett (from Sub-Mariner # 38; 1955). Colan cover pencils.
 </p>
-
-Issues:<ul>
-<li><a href="MarvelSuperHeroes.html">Marvel Super-Heroes #12</a></li>
-<li><a href="MarvelSuperHeroes13.html">Marvel Super-Heroes #13</a></li>
-<li><a href="MarvelSuperHeroes14.html">Marvel Super-Heroes #14</a></li>
-<li><a href="MarvelSuperHeroes15.html">Marvel Super-Heroes #15</a></li>
-<li><a href="MarvelSuperHeroes16.html">Marvel Super-Heroes #16</a></li>
-<li><a href="MarvelSuperHeroes17.html">Marvel Super-Heroes #17</a></li>
-<li><a href="MarvelSuperHeroes18.html">Marvel Super-Heroes #18</a></li>
-<li><a href="MarvelSuperHeroes19.html">Marvel Super-Heroes #19</a></li>
-<li><a href="MarvelSuperHeroes20.html">Marvel Super-Heroes #20</a></li>
-<li><a href="MarvelSuperHeroes21.html">Marvel Super-Heroes #21</a></li>
-<li><a href="MarvelSuperHeroes22.html">Marvel Super-Heroes #22</a></li>
-<li><a href="MarvelSuperHeroes23.html">Marvel Super-Heroes #23</a></li>
-<li><a href="MarvelSuperHeroes24.html">Marvel Super-Heroes #24</a></li>
-<li><a href="MarvelSuperHeroes25.html">Marvel Super-Heroes #25</a></li>
-<li><a href="MarvelSuperHeroes26.html">Marvel Super-Heroes #26</a></li>
-<li><a href="MarvelSuperHeroesSpecial01.html">Marvel Super-Heroes Special #1</a></li>
-</ul>
 
 </body>
 </html>
