--- a/AliensVsPredator/aliensvspredator.html
+++ b/AliensVsPredator/aliensvspredator.html
@@ -2,22 +2,53 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>AVP</title>
 </head>
 
 <body>
-<h2>Aliens vs Predator</h2>
-<img src="DarkHorsePresents36a.jpg">
-<img src="DarkHorsePresents36b.jpg">
-<img src="AVP1.jpg"> <br>
-Illustrator: Phill Norwood<br>
-Writer: Randy Stradley<br>
-Publisher: 1990 Dark Horse<br>
+<img src="AVPMovie.jpg"> <br>
+1 Movie 2004 by Fox<br>
+5 issues in 1990, 1 TPB in 1991 by Dark Horse<br>
 <p>
-About: Aliens vs. Predator (also known as Alien vs. Predator, abbreviated AVP) comics are part of the crossover franchise originated and published by Dark Horse Comics. According to the notes which accompany the first Aliens versus Predator graphic novel, the original idea of combining the Aliens with Predators was the result of a brain-storming session between the comic's creators (AVP artist and editor Chris Warner is specifically credited) in the late 1980s.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AVP0.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP15.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Original<br>
+Alien vs. Predator is a 2004 science fiction action film written and directed by Paul W. S. Anderson. It is the first installment of the Alien vs. Predator franchise, adapting a crossover bringing together the eponymous creatures of the Alien and Predator series, a concept which originated in a 1989 comic book written by Randy Stradley and Chris Warner. Their writing was influenced by Aztec mythology, the comic book series, and the writings of Erich von Daniken.
+</p><p>
+Aliens vs. Predator comics are part of the crossover franchise originated and published by Dark Horse Comics. According to the notes which accompany the first Aliens versus Predator graphic novel, the original idea of combining the Aliens with Predators was the result of a brain-storming session between the comic's creators (Chris Warner is specifically credited) in the late 1980s.
+</p><p>
+A sequel, Aliens vs. Predator: Requiem, was released in 2007. Set immediately after the events of the previous film, the film begins with a Predator ship crashing into a forest outside of Gunnison, Colorado, where a Alien-Predator hybrid known as the Predalien escapes and makes its way to the nearby small town. A skilled veteran Predator is dispatched to kill the Predalien, as the townspeople try to survive the ensuing carnage.
+</p><p>
+Set in 2004, the film follows a group of archaeologists assembled by billionaire and self-taught engineer Charles Bishop Weyland (as the original founder and CEO of Weyland Industries) for an expedition to Antarctica to investigate a mysterious heat signal detected by his satellites. Weyland hopes to claim the find for himself and be remembered for it, and his group discovers an ancient pyramid below the surface of an old and abandoned whaling station. Hieroglyphs and sculptures reveal that the pyramid is a hunting ground for young Predators who kill Aliens as a rite of passage. The humans are caught in the middle of a battle between the two species and attempt to prevent the Aliens from reaching the surface.
+</p><p>
 The first Aliens versus Predator centers on Ryushi, a recently colonized planet, and Machiko Noguchi, the Chigusa Corporation's administrator there. The settlers on Ryushi raise cattle-like quadrupedal ungulates called rhynth for export to other solar systems, and at the time of the story are in the process of assembling a shipment of the native livestock.
 </p><p>
 Unbeknownst to the colonists, Ryushi is a traditional hunting ground of the Predators, and they are returning for their initiation rites. On board the Predator ship, the prey are prepared: an Alien queen lays eggs for delivery to Ryushi. Confounding the Predator's safeguards, this queen manages to slip an egg containing the seed of another queen into the shipment.
@@ -27,14 +58,16 @@ On reaching Ryushi, the eggs hatch and infect Rhynths. Led by a Predator elder, 
 Meanwhile, the infected Rhynth have been loaded aboard a cargo transporter and, with a queen among their number, an Alien colony quickly takes hold. The Predator assault continues to the settler colony itself, and the surviving settlers find themselves pitched between the Aliens and Predators. Broken Tusk, now recovered due to the intervention of a human doctor, sides with Machiko, and together with the cargo ship's crew they arrange for the transporter's massive orbiter to crash into Ryushi and destroy the colony and the Aliens.
 </p><p>
 In the ensuing fight, Broken Tusk is mortally wounded, but, admiring the courage of his human comrade, "bloods" Machiko with the mark of his clan. The story concludes with Machiko the sole inhabitant of Ryushi, the surviving settlers having been evacuated from the planet. She awaits, and is rewarded with, the return of the Predators and another hunt. One of Broken Tusk's former Predator rivals greets her and, recognizing Broken Tusk's clan symbol, accepts Machiko into the hunt.
+</p><p>
+Alien vs Predator: WAR: First blood or last breath -- those are the only choices in Aliens vs. Predator: War! The Predators converge on the seed planet Bunda for the biggest bug hunt yet, each taking position to draw first blood. Sometimes reeling-in the catch of your life can mean the end of your life. Machiko Noguchi, the last survivor of the colony on Ryushi, is journeying aboard a massive Predator ship when a freshly caught Alien Queen snaps her tethers, destroying all in her path. Unfortunately for her, Machiko is in that path. Machiko, a human who has been inducted into the Predator clan, is forced into a duel in order to claim her rightful place in the upcoming hunt. But when a new group of humans shows up, what began as sport becomes serious business.
 </p>
 
 Aliens vs. Predator:<ul>
 <li>Original 1991</li>
+<li>War 1995
 <li>Deadliest of the Species 1996 collects:<ul>
 Deadliest of the Species (Book 1) 1995<br>
 Deadliest of the Species (Book 2) 1995</ul>
-<li>War 1995
 <li>Booty 1996
 <li>Eternal 1998
 <li>Xenogenesis 1998-1999
