--- a/kb.html
+++ b/kb.html
@@ -2174,6 +2174,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Beyond</td>
+<td>1950</td>
+<td>Ace</td>
+<td><a href="Beyond/Beyond.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bible</td>
 <td>-600</td>
 <td>GOD</td>
@@ -10959,7 +10966,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Science Comics</td>
 <td>1946</td>
-<td>Ace Magazines</td>
+<td>Ace</td>
 <td><a href="ScienceComics/ScienceComics.html">Details</a></td>
 </tr>
 
@@ -11591,6 +11598,13 @@ Creative Knowledgebase<br>
 <td>2011</td>
 <td>Vertigo</td>
 <td><a href="Spaceman2011/Spaceman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space War</td>
+<td>1959</td>
+<td>Charlton</td>
+<td><a href="SpaceWar/SpaceWar.html">Details</a></td>
 </tr>
 
 <tr>
