--- a/AliensVsPredator/aliensvspredator.html
+++ b/AliensVsPredator/aliensvspredator.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="AVPMovie.jpg"> <br>
-1 Movie 2004 by Fox<br>
+2 Movie 2004, 2007 by 20th Century Fox<br>
 5 issues in 1990, 1 TPB in 1991 by Dark Horse<br>
 <p>
 <div class="row"><div class="column">
@@ -36,6 +36,9 @@
 <div class="mySlides" style="text-align: center;"><img src="AVP13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AVP14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AVP15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVPMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AVP2Movie.jpg" title="Alien vs Predator Requiem"></div>
+
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -45,11 +48,11 @@ Alien vs. Predator is a 2004 science fiction action film written and directed by
 </p><p>
 Aliens vs. Predator comics are part of the crossover franchise originated and published by Dark Horse Comics. According to the notes which accompany the first Aliens versus Predator graphic novel, the original idea of combining the Aliens with Predators was the result of a brain-storming session between the comic's creators (Chris Warner is specifically credited) in the late 1980s.
 </p><p>
+The first movie is set in 2004, a group of archaeologists is assembled by billionaire and self-taught engineer Charles Bishop Weyland (as the original founder and CEO of Weyland Industries) for an expedition to Antarctica to investigate a mysterious heat signal detected by his satellites. Weyland hopes to claim the find for himself and be remembered for it, and his group discovers an ancient pyramid below the surface of an old and abandoned whaling station. Hieroglyphs and sculptures reveal that the pyramid is a hunting ground for young Predators who kill Aliens as a rite of passage. The humans are caught in the middle of a battle between the two species and attempt to prevent the Aliens from reaching the surface.
+</p><p>
 A sequel, Aliens vs. Predator: Requiem, was released in 2007. Set immediately after the events of the previous film, the film begins with a Predator ship crashing into a forest outside of Gunnison, Colorado, where a Alien-Predator hybrid known as the Predalien escapes and makes its way to the nearby small town. A skilled veteran Predator is dispatched to kill the Predalien, as the townspeople try to survive the ensuing carnage.
 </p><p>
-Set in 2004, the film follows a group of archaeologists assembled by billionaire and self-taught engineer Charles Bishop Weyland (as the original founder and CEO of Weyland Industries) for an expedition to Antarctica to investigate a mysterious heat signal detected by his satellites. Weyland hopes to claim the find for himself and be remembered for it, and his group discovers an ancient pyramid below the surface of an old and abandoned whaling station. Hieroglyphs and sculptures reveal that the pyramid is a hunting ground for young Predators who kill Aliens as a rite of passage. The humans are caught in the middle of a battle between the two species and attempt to prevent the Aliens from reaching the surface.
-</p><p>
-The first Aliens versus Predator centers on Ryushi, a recently colonized planet, and Machiko Noguchi, the Chigusa Corporation's administrator there. The settlers on Ryushi raise cattle-like quadrupedal ungulates called rhynth for export to other solar systems, and at the time of the story are in the process of assembling a shipment of the native livestock.
+The first Aliens versus Predator comic book, centers on Ryushi, a recently colonized planet, and Machiko Noguchi, the Chigusa Corporation's administrator there. The settlers on Ryushi raise cattle-like quadrupedal ungulates called rhynth for export to other solar systems, and at the time of the story are in the process of assembling a shipment of the native livestock.
 </p><p>
 Unbeknownst to the colonists, Ryushi is a traditional hunting ground of the Predators, and they are returning for their initiation rites. On board the Predator ship, the prey are prepared: an Alien queen lays eggs for delivery to Ryushi. Confounding the Predator's safeguards, this queen manages to slip an egg containing the seed of another queen into the shipment.
 </p><p>
